# dwh-etl

./: .gitignore  LICENSE  config.yaml  data-profiling-slides.py  data_profiling.py  etl-process-slides.py  main.py  pyproject.toml  transform.py
__marimo__/session/: data-profiling-slides.py.json  etl-process-slides.py.json
docs/plans/: 2026-03-01-entity-transform-design.md  2026-03-01-entity-transform.md  2026-03-01-etl-pipeline-design.md  2026-03-01-etl-pipeline.md  2026-03-02-borough-inference-design.md  2026-03-02-borough-inference.md  2026-03-02-precinct-spatial-join.md  2026-03-22-marimo-profiling-dashboard.md  2026-03-22-marimo-profiling-slides-design.md
docs/profiling/: data_profile_summary.json  data_profile_summary.md
sql/: create_mdm_views.sql  db_model_creation.sql  load_staging_to_real.sql
tests/: test_data_profiling.py  test_pipeline.py  test_transform.py
