[project]
name = "etl"
version = "0.1.0"
description = "NYC crash data ETL pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=3.0",
    "sodapy>=2.2.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "geopandas>=1.0",
    "openmeteo-requests>=1.7.5",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "meteostat>=2.1.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
